<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_order"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/order"/>
        <item
            android:id="@+id/navigation_item_order_record"
            android:icon="@drawable/ic_launcher"
            android:title="@string/order_record"/>
        <item
            android:id="@+id/navigation_item_support"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/support"/>
        <item
            android:id="@+id/navigation_item_notification"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/notification"/>
        <item
            android:id="@+id/navigation_item_setting"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/setting"/>
        <item
            android:id="@+id/navigation_item_about"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/about"/>
        <item
            android:id="@+id/navigation_item_share"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:title="@string/share"/>
        <item
            android:id="@+id/navigation_item_account"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/account"/>
        <item
            android:id="@+id/navigation_item_wallet"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/wallet"/>
        <item
            android:id="@+id/navigation_item_bouns"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/bouns"/>
    </group>
</menu>