<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" android:id="@+id/main_layout" >

	<TextView
		android:id="@+id/unit_txt_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ellipsize="middle"
		android:singleLine="true"
		android:text="@string/unit_txt"
		android:paddingLeft="20dp"
		android:textSize="@dimen/default_text_address_size_sp"
		android:layout_gravity="center_horizontal"
		android:textColor="@color/btn_bouns_title"
		/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ellipsize="middle"
		android:singleLine="true"
		android:paddingLeft="20dp"
		android:text="@string/unit"
		android:layout_gravity="right"
		android:layout_marginRight="20dp"
		android:textColor="@color/address_devicename_txt"
		/>
	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="10dp"
		android:paddingLeft="10dp"
		android:rowCount="4"
		android:columnCount="6" >
		　　<TextView
		android:id="@+id/one"
		android:text="@string/unit_title1"/>
		　　<TextView
		android:id="@+id/two"
		android:paddingLeft="30dp"
		android:text="@string/unit_title2"/>
		　　　<TextView
		android:id="@+id/three"
		android:paddingLeft="30dp"
		android:text="@string/unit_title3"/>
		　　<TextView
		android:id="@+id/devide"
		android:paddingLeft="30dp"
		android:text="@string/unit_title4"/>
		　　<TextView
		android:id="@+id/four"
		android:paddingLeft="30dp"
		android:text="@string/unit_title5"/>
		　　<TextView
		android:id="@+id/five"
		android:paddingLeft="30dp"
		android:text="@string/unit_title6"/>
		　　<TextView
		android:id="@+id/six"
		android:text="1"/>
		　　<EditText
		android:paddingLeft="40dp"
		android:id="@+id/multiply"
		android:text=""/>
		　　<EditText
		android:paddingLeft="40dp"
		android:id="@+id/seven"
		android:text=""/>
		　　<EditText
		android:paddingLeft="40dp"
		android:id="@+id/eight"
		android:text=""/>
		　　<EditText
		android:paddingLeft="40dp"
		android:id="@+id/nine"
		android:text=""/>
		<EditText
			android:paddingLeft="40dp"
			android:text=""/>
		　<TextView
		android:text="2"/>
		　　<EditText
		android:paddingLeft="40dp"
		android:text=""/>
		<EditText
			android:paddingLeft="40dp"
			android:text=""/>
		　<EditText
		android:paddingLeft="40dp"
		android:text=""/>
		　　<EditText
		android:paddingLeft="40dp"
		android:text=""/>
		<EditText
			android:paddingLeft="40dp"
			android:text=""/>
		　<TextView
		android:text="3"/>
		　　<EditText
		android:paddingLeft="40dp"
		android:text=""/>
		<EditText
			android:paddingLeft="40dp"
			android:text=""/>
		　<EditText
		android:paddingLeft="40dp"
		android:text=""/>
		　　<EditText
		android:paddingLeft="40dp"
		android:text=""/>
		　<EditText
		android:paddingLeft="40dp"
		android:text=""/>
	</GridLayout>

	<ImageButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@color/transparent"
		android:layout_gravity="center_horizontal"
		android:src="@drawable/ic_content_add_box"
		/>
	<LinearLayout
		android:id="@+id/password"
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:gravity="right"
		android:paddingTop="20dp"
		android:paddingBottom="20dp"
		>
	<TextView
		android:id="@+id/txt_unit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:ellipsize="middle"
		android:singleLine="true"
		android:paddingRight="30dp"
		android:text="@string/unit_total"
		/>
	<TextView
		android:id="@+id/num"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:ellipsize="middle"
		android:singleLine="true"
		android:paddingRight="30dp"
		android:text="@string/unit_total_count_example"
		/>
	<TextView
		android:id="@+id/txt_unit_count"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:ellipsize="middle"
		android:singleLine="true"
		android:paddingRight="30dp"
		android:text="@string/unit_total_count"
		/>
		</LinearLayout>
</LinearLayout>