<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="40dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/white"
    android:orientation="vertical">
 <RelativeLayout
        android:id="@+id/account_conlum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/txt_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_id_title" />
        <EditText
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txt_account"
            android:hint="@string/hint_default_portal_id"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/password_conlum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_conlum"
        >
      <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/login_password_title" />
      <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txt_password"
        android:hint="@string/hint_default_portal_password"
        />
</RelativeLayout>
       <TextView
           android:id="@+id/txt_forget_password"
           android:paddingTop="20dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/forget_password"
           android:linksClickable="true"
           />
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="20dp"
           >
           <Button
               android:id="@+id/login"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/login_button"
               />
           <Button
               android:id="@+id/register"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/register_button"
               android:layout_toRightOf="@+id/login"
               />
       </LinearLayout>
</LinearLayout>
