<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_light_gray"
     >



            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                >

                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="middle"
                     android:textStyle="bold"
                     android:singleLine="true"
                     android:layout_gravity="center_horizontal"
                     android:paddingLeft="20dp"
                     android:text="@string/pick_identity_title"
                     android:textSize="@dimen/default_text_address_size_sp"
                     android:textColor="@color/btn_bouns_title"
                     />

                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:visibility="gone"
                    android:text="@string/pick_identity_info"
                    android:textColor="@color/address_devicename_txt"
                    />


                <Button
                    android:id="@+id/taxi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taxi_driver"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@color/btn_bouns_record"
                     />
                <Button
                    android:id="@+id/uber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Uber_driver"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@color/btn_bouns_record"
                    />
                <Button
                    android:id="@+id/truck"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/truck_driver"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@color/btn_bouns_record"
                    />
                <Button
                    android:id="@+id/cargo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cargo_driver"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@color/btn_bouns_record"
                    />

                <Button
                    android:id="@+id/trailer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer_driver"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@color/btn_bouns_record"
                    />


            </LinearLayout>


</RelativeLayout>